Assert when loading websites in windows build (debug mode)

When page is loaded, ia_role is not set (value is 0) when the current
UX role is AX_ROLE_HEADING.
Similarly when htmltag is empty, we set the role_name as "div" but not ia_role.
This causes an assert in Windows debug build in the following line
DCHECK(!role_name.empty() || ia_role);
BUG=698728

Review-Url: https://codereview.chromium.org/2731973002
Cr-Commit-Position: refs/heads/master@{#458014}

Former-commit-id: 22a053d0048c877629a0ba807290e65f730f715b